# datavault

./: .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: test.yml
datavault/: __init__.py  cli.py
tests/: test_datavault.py  test_datavault_cli.py
