[tool.poetry]
name = "datavault"
version = "1.0.0"
description = ""
authors = ["Faraz Yashar <fny@duke.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
cryptography = "^37.0.4"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = {version = "^22.6.0", allow-prereleases = true}

[tool.poetry.scripts]
datavault = "datavault.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
